Initial changes to connect to bitcore-node

--- a/app/src/components/transaction-list/transaction-list.html
+++ b/app/src/components/transaction-list/transaction-list.html
@@ -5,7 +5,7 @@
 
 <div *ngIf="!loading">
   <ion-grid>
-    <ion-row *ngFor="let tx of transactions.txs">
+    <ion-row *ngFor="let tx of transactions">
       <ion-col col-12>
         <transaction [tx]="tx"></transaction>
       </ion-col>
