Working on getting address's transactions to show up

--- a/packages/insight/app/src/components/denomination/denomination.html
+++ b/packages/insight/app/src/components/denomination/denomination.html
@@ -1,4 +1,4 @@
-<ion-list radio-group [(ngModel)]="currencyProvider.currencySymbol" (ionChange)="currencyProvider.setCurrency(currencyProvider.currencySymbol)">
+<ion-list radio-group [(ngModel)]="currencyProvider.currencySymbol" (ionChange)="priceProvider.setCurrency(currencyProvider.currencySymbol)">
   <ion-list-header *ngIf="switcherOn">
     Blockchain
   </ion-list-header>
