--- a/packages/insight/app/src/components/transaction/transaction.html
+++ b/packages/insight/app/src/components/transaction/transaction.html
@@ -73,7 +73,7 @@
           <div>
             <div class="ellipsis">
               <p>
-                <a (click)="goToAddress(getAddress(vout))">{{ getAddress(vout) }}</a>
+                <a (click)="goToAddress(vout.address)">{{ vout.address }}</a>
               </p>
             </div>
             <div *ngIf="expanded">
