changing insight to use coins

--- a/packages/insight/app/src/components/coin/coin.html
+++ b/packages/insight/app/src/components/coin/coin.html
@@ -1,16 +1,15 @@
-<ion-grid>
-  <ion-row>
-    <ion-col col-7>
-      <span>
-        Minted {{ currency.getConvertedNumber(coin.value) | number:'1.0-8' }}
-          <a (click)="goToTx(coin.mintTxid)">{{ coin.mintTxid }}</a>
-        </span>
-    </ion-col>
-    <ion-col col-5 text-right>
-      <ion-note [hidden]="!coin.spentTxid">
-        Spent
-        <a (click)="goToTx(coin.spentTxid)">{{ coin.spentTxid }}</a>
-      </ion-note>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+<ion-row>
+  <ion-col col-5>
+    <ion-note text-left>
+      <a class="ellipsis" (click)="goToTx(coin.mintTxid)">{{ coin.mintTxid }}</a>
+    </ion-note>
+  </ion-col>
+  <ion-col col-3 text-right>
+    {{ currency.getConvertedNumber(coin.value) | number:'1.0-8' }} {{ currency.currencySymbol }}
+  </ion-col>
+  <ion-col col-4 text-left>
+    <ion-note [hidden]="!coin.spentTxid">
+      <a class="ellipsis" (click)="goToTx(coin.spentTxid)">{{ coin.spentTxid }}</a>
+    </ion-note>
+  </ion-col>
+</ion-row>
