Adding scripts to serve insight

--- a/packages/insight/app/src/components/coin-list/coin-list.html
+++ b/packages/insight/app/src/components/coin-list/coin-list.html
@@ -3,7 +3,7 @@
   <ion-row>
     <ion-col col-5>
       <ion-note text-left>
-        Minted
+        Received
       </ion-note>
     </ion-col>
     <ion-col col-3 text-right>
