--- a/packages/insight/app/src/components/denomination/denomination.html
+++ b/packages/insight/app/src/components/denomination/denomination.html
@@ -4,11 +4,11 @@
       Blockchain
     </ion-list-header>
 
-    <ion-item *ngFor="let chainNetwork of enabledChains">
+    <ion-item *ngFor="let chainNetwork of api.networkSettings.value.availableNetworks">
       <ion-avatar item-start>
         <img src="assets/img/currency_logos/{{ chainNetwork.chain.toLowerCase() }}.svg" class="logo" />
       </ion-avatar>
-      <ion-label color="dark" (click)="changeExplorer(chainNetwork)">
+      <ion-label color="dark" (click)="changeExplorer(api.networkSettings.value.selectedNetwork)">
         <button ion-button small>{{chainNetwork.chain}} {{chainNetwork.network}}</button>
       </ion-label>
     </ion-item>
