refactor(insight): scaffolding

--- a/packages/insight/src/app/home/home.page.html
+++ b/packages/insight/src/app/home/home.page.html
@@ -4,13 +4,67 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Bitcoin Cash
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder top-element">
+          signs of life
+        </div>
+      </ion-col>
+      <ion-col size="12" size-md>
+        <div class="placeholder top-element">
+          last 6 blocks
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder top-element">
+          transaction activity measured in USD
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder heatmap">
+          2018 day-by-day heatmap
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder heatmap">
+          2017 day-by-day heatmap
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder heatmap">
+          2016 day-by-day heatmap
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder heatmap">
+          2015 day-by-day heatmap
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-md>
+        <div class="placeholder heatmap">
+          load earlier button
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
