--- a/packages/insight/src/app/app.component.html
+++ b/packages/insight/src/app/app.component.html
@@ -1,16 +1,10 @@
 <ion-app>
-  <ion-split-pane>
+  <ion-split-pane when="lg">
     <ion-menu>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
                 {{ p.title }}
               </ion-label>
