--- a/packages/insight/src/app/blocks/block-list/block-list.component.html
+++ b/packages/insight/src/app/blocks/block-list/block-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  block-list works!
-</p>
+<app-block
+    *ngFor="let block of block$ | async as blocks; index as i; first as isFirst"
+    [block]="block"
+    (click)="goToBlock(block)"
+    [displayValueIn]="displayValueIn"
+></app-block>
