--- a/packages/insight/src/app/blocks/blocks.page.html
+++ b/packages/insight/src/app/blocks/blocks.page.html
@@ -1,14 +1,15 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Blocks
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Blocks</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <app-block-list></app-block-list>
+    <app-block-list
+        [chain]="chain$"
+        [query]="query$"
+    ></app-block-list>
 </ion-content>
