--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -3,21 +3,38 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+  --ion-text-color: #3d3d4d;
+  --ion-background-color: #f8f8f9;
+
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  // --ion-color-primary: #3880ff;
+  // --ion-color-primary-rgb: 56, 128, 255;
+  // --ion-color-primary-contrast: #ffffff;
+  // --ion-color-primary-contrast-rgb: 255, 255, 255;
+  // --ion-color-primary-shade: #3171e0;
+  // --ion-color-primary-tint: #4c8dff;
+
+  --ion-color-primary: #2a3387;
+  --ion-color-primary-rgb: 61, 210, 240;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: darken(--ion-color-primary, 10%);
+  --ion-color-primary-tint: lighten(--ion-color-primary, 10%);
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
+  // --ion-color-secondary: #0cd1e8;
+  // --ion-color-secondary-rgb: 12, 209, 232;
+  // --ion-color-secondary-contrast: #ffffff;
+  // --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  // --ion-color-secondary-shade: #0bb8cc;
+  // --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary: #3dd2f0;
+  --ion-color-secondary-rgb: 61, 210, 240;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  --ion-color-secondary-shade: #02a1cb;
+  --ion-color-secondary-tint: #57e8fd;
 
   /** tertiary **/
   --ion-color-tertiary: #7044ff;
