--- a/packages/insight/src/app/block/block.page.html
+++ b/packages/insight/src/app/block/block.page.html
@@ -4,14 +4,15 @@
             <ion-menu-button></ion-menu-button>
             <ion-back-button></ion-back-button>
         </ion-buttons>
-        <ion-title>Blocks</ion-title>
+        <ion-title>Block</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-    <app-block-list
-        [chain$]="config.currentChain$"
-        [query$]="query$"
+    <app-block
+        *ngIf="block$ | async as block"
+        [block]="block"
+        [summary]="false"
         [displayValueCode]="config.displayValueCode$ | async"
-    ></app-block-list>
+    ></app-block>
 </ion-content>
