--- a/packages/insight/src/app/blocks/block-list/block-list.component.html
+++ b/packages/insight/src/app/blocks/block-list/block-list.component.html
@@ -1,6 +1,6 @@
 <app-block
-    *ngFor="let block of block$ | async as blocks; index as i; first as isFirst"
+    *ngFor="let block of blocks$ | async"
     [block]="block"
-    (click)="goToBlock(block)"
-    [displayValueIn]="displayValueIn"
+    [routerLink]="['/' + (chain$ | async).code + '/block/' + block.hash]"
+    [displayValueCode]="displayValueCode"
 ></app-block>
