--- a/packages/insight/src/app/app.component.scss
+++ b/packages/insight/src/app/app.component.scss
@@ -7,3 +7,8 @@
     border-left: 3px solid rgba(119, 209, 255, 0.79);
   }
 }
+
+ion-header.header-md:after {
+  background: none;
+  border-top: 1px solid lighten(#3d3d4d, 50%);
+}
