--- a/packages/insight/src/app/block/block.page.html
+++ b/packages/insight/src/app/block/block.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header no-border>
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
