--- a/packages/insight/src/app/shared/block/block.component.scss
+++ b/packages/insight/src/app/shared/block/block.component.scss
@@ -1,12 +1,15 @@
+$labelColor: #949494;
+
 .card {
   border-radius: 3px;
   max-width: 800px;
   margin: 1em auto;
   background-color: #fff;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.08);
+  font-size: 0.9rem;
 }
+
 .section {
-  padding: 1em;
   & + .section {
     border-top: 1px solid #f1f2f5;
   }
@@ -18,12 +21,19 @@
   align-items: center;
 }
 
+.header {
+  padding: 1em;
+  .detail-view & {
+    padding: 1.5em;
+  }
+}
+
 .identifiers {
   width: 150px;
 }
 
 .height {
-  font-size: 1.3em;
+  font-size: 1.3rem;
   color: var(--ion-color-primary);
 }
 
@@ -44,29 +54,56 @@
 }
 
 .time,
-.value {
-  color: #aaa;
+.key {
+  color: $labelColor;
 }
 
-.key,
-.property {
-  margin-bottom: 0.3em;
-}
-
-.time,
-.key,
-.value {
-  font-size: 0.9em;
+.property + .property {
+  margin-top: 0.5rem;
+  .detail-view & {
+    margin-top: 0.8rem;
+  }
 }
 
 .key {
+  display: inline-block;
   margin-right: 0.3em;
+  .detail-view & {
+    margin-right: 0.4em;
+  }
 }
 
 .link {
-  color: var(--ion-color-primary);
+  color: var(--app-link-color);
+  cursor: pointer;
 }
 
 .reward {
   display: inline;
+}
+
+table {
+  width: 100%;
+}
+
+th,
+td {
+  padding: 1em;
+}
+
+td {
+  word-break: break-all;
+}
+
+$border: 1px solid #eee;
+
+th {
+  font-weight: normal;
+  color: $labelColor;
+  border-right: $border;
+  text-align: left;
+}
+
+tr + tr {
+  border-top: $border;
 }
