--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -7,6 +7,8 @@
   --ion-text-color: #3d3d4d;
   --ion-background-color: #f8f8f9;
 
+  --app-link-color: #657fe5;
+
   /** primary **/
   // --ion-color-primary: #3880ff;
   // --ion-color-primary-rgb: 56, 128, 255;
