--- a/packages/insight-previous/src/components/head-nav/head-nav.html
+++ b/packages/insight-previous/src/components/head-nav/head-nav.html
@@ -2,14 +2,15 @@
   <button ion-button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title>{{title}}</ion-title>
+  <ion-title [ngClass]="{'logo-header': title == 'insight'}">{{title}}</ion-title>
   <ion-buttons end>
     <button ion-button (click)="changeCurrency($event)">
     </button>
 
     <button ion-button (click)="changeCurrency($event)">
       <ion-icon name="logo-bitcoin" *ngIf="currency.currencySymbol !== 'USD'"></ion-icon>
-      <ion-icon name="logo-usd" *ngIf="currency.currencySymbol === 'USD'"></ion-icon>&nbsp;{{ currency.currencySymbol }}
+      <ion-icon name="logo-usd" *ngIf="currency.currencySymbol === 'USD'"></ion-icon>&nbsp;{{ currency.currencySymbol
+      }}
     </button>
     <button ion-button icon-only (click)="toggleSearch()">
       <ion-icon name="search"></ion-icon>
@@ -18,5 +19,6 @@
 </ion-navbar>
 
 <form (ngSubmit)="search($event)">
-  <ion-searchbar [hidden]="!showSearch" placeholder="{{ 'Search for block, transaction or address' }}" [(ngModel)]="q" name="search"></ion-searchbar>
+  <ion-searchbar [hidden]="!showSearch" placeholder="{{ 'Search for block, transaction or address' }}" [(ngModel)]="q"
+    name="search"></ion-searchbar>
 </form>
