--- a/packages/insight-previous/src/theme/variables.scss
+++ b/packages/insight-previous/src/theme/variables.scss
@@ -70,3 +70,12 @@ $chip-wp-background-color: rgba(0, 0, 0, 0.06);
 // Other globals
 
 $desktop-min-width: 1288px;
+
+@font-face {
+  font-family: Ubuntu;
+  src: url('../assets/fonts/ubuntu.woff2') format('woff2');
+}
+* {
+  font-family: Ubuntu;
+  font-size: 14px;
+}
