--- a/packages/insight-previous/src/components/denomination/denomination.html
+++ b/packages/insight-previous/src/components/denomination/denomination.html
@@ -8,7 +8,7 @@
       <ion-avatar item-start>
         <img src="assets/img/currency_logos/{{ chainNetwork.chain.toLowerCase() }}.svg" class="logo" />
       </ion-avatar>
-      <ion-label color="dark" (click)="changeExplorer(api.networkSettings.value.selectedNetwork)">
+      <ion-label color="dark" (click)="changeExplorer(chainNetwork)">
         <button ion-button small>{{chainNetwork.chain}} {{chainNetwork.network}}</button>
       </ion-label>
     </ion-item>
