Corrections to show vin address

--- a/packages/insight-previous/src/components/transaction/transaction.html
+++ b/packages/insight-previous/src/components/transaction/transaction.html
@@ -38,7 +38,7 @@
           <div>
             <div class="ellipsis">
               <p>
-                <a (click)="goToAddress(vin.addr)">{{ vin.addr }}</a>
+                <a (click)="goToAddress(vin.address)">{{ vin.address }}</a>
               </p>
             </div>
             <div [hidden]="!expanded">
