--- a/packages/insight/src/app/app.component.html
+++ b/packages/insight/src/app/app.component.html
@@ -43,17 +43,17 @@
 
                         <ion-item
                             [routerDirection]="'root'"
-                            [routerLink]="['/BCH']"
+                            [routerLink]="['/XVG']"
                             routerLinkActive="active"
                         >
-                            <ion-label>BCH</ion-label>
+                            <ion-label>XVG</ion-label>
                         </ion-item>
                         <ion-item
                             [routerDirection]="'root'"
-                            [routerLink]="['/tBCH']"
+                            [routerLink]="['/tXVG']"
                             routerLinkActive="active"
                         >
-                            <ion-label>tBCH</ion-label>
+                            <ion-label>tXVG</ion-label>
                         </ion-item>
                         <ion-item
                             [routerDirection]="'root'"
@@ -74,16 +74,16 @@
                             <ion-label>Display Currency</ion-label>
                         </ion-item-divider>
                         <ion-item
-                            (click)="config.displayValueCode$.next('BCH')"
-                            [ngClass]="{'active': (config.displayValueCode$ | async) === 'BCH'}"
+                            (click)="config.displayValueCode$.next('XVG')"
+                            [ngClass]="{'active': (config.displayValueCode$ | async) === 'XVG'}"
                         >
-                            <ion-label>BCH</ion-label>
+                            <ion-label>XVG</ion-label>
                         </ion-item>
                         <ion-item
-                            (click)="config.displayValueCode$.next('BCH_bits')"
-                            [ngClass]="{'active': (config.displayValueCode$ | async) === 'BCH_bits'}"
+                            (click)="config.displayValueCode$.next('XVG_bits')"
+                            [ngClass]="{'active': (config.displayValueCode$ | async) === 'XVG_bits'}"
                         >
-                            <ion-label>Bits (BCH)</ion-label>
+                            <ion-label>Bits (XVG)</ion-label>
                         </ion-item>
                         <ion-item
                             (click)="config.displayValueCode$.next('BTC')"
