Fix head-nav view. Missing injectable

--- a/packages/insight-previous/src/components/head-nav/head-nav.html
+++ b/packages/insight-previous/src/components/head-nav/head-nav.html
@@ -1,5 +1,5 @@
 <ion-navbar color="brand">
-  <button ion-button menuToggle>
+  <button ion-button icon-only menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
   <ion-title [ngClass]="{'logo-header': title == 'insight'}">{{ title }}</ion-title>
