--- a/packages/insight-previous/src/components/head-nav/head-nav.html
+++ b/packages/insight-previous/src/components/head-nav/head-nav.html
@@ -10,7 +10,9 @@
     <button ion-button (click)="changeCurrency($event)">
       <ion-icon name="logo-bitcoin" *ngIf="currency.currencySymbol !== 'USD'"></ion-icon>
       <ion-icon name="logo-usd" *ngIf="currency.currencySymbol === 'USD'"></ion-icon>
-      {{ currency?.currencyS }}
+      &nbsp;
+      {{ currency?.currencySymbol }}
+      &nbsp;
       <i>({{ config?.network }})</i>
     </button>
     <button ion-button icon-only (click)="toggleSearch()">
