--- a/packages/insight-previous/src/theme/variables.scss
+++ b/packages/insight-previous/src/theme/variables.scss
@@ -20,9 +20,9 @@ $font-path: '../assets/fonts';
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  brand: #8dc429,
+  brand: #31b1dc,
   primary: #2fa4d7,
-  secondary: #8dc429,
+  secondary: #31b1dc,
   danger: #f53d3d,
   warning: #ffa400,
   light: #f4f4f4,
