refactor chain and network

--- a/packages/insight-previous/src/components/coin-list/coin-list.html
+++ b/packages/insight-previous/src/components/coin-list/coin-list.html
@@ -4,7 +4,7 @@
   <ion-grid>
     <ion-row *ngFor="let tx of txs; let i = index">
       <ion-col col-12 *ngIf="i < limit">
-        <coin [coin]="tx"></coin>
+        <coin [coin]="tx" [chainNetwork]="chainNetwork"></coin>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="limit < txs.length">
