improvements for address view

--- a/packages/insight-previous/src/components/coin-list/coin-list.html
+++ b/packages/insight-previous/src/components/coin-list/coin-list.html
@@ -3,7 +3,7 @@
 <div *ngIf="!loading">
   <ion-grid>
     <ion-row *ngFor="let tx of txs; let i = index">
-      <ion-col col-12 *ngIf="i < limit">
+      <ion-col col-12 *ngIf="i < limit && (tx.spentTxid !== '' || tx.mintTxid)">
         <coin [coin]="tx" [chainNetwork]="chainNetwork"></coin>
       </ion-col>
     </ion-row>
