--- a/packages/insight-previous/src/components/transaction/transaction.html
+++ b/packages/insight-previous/src/components/transaction/transaction.html
@@ -36,7 +36,7 @@
           Unconfirmed
         </ion-label>
       </ion-chip>
-      <ion-chip item-end color="brand" *ngIf="confirmations === 1">
+      <ion-chip item-end color="primary" *ngIf="confirmations === 1">
         <ion-label>
           1 Confirmation
         </ion-label>
@@ -160,7 +160,7 @@
       <ion-chip color="warning" *ngIf="confirmations === -1">
         <ion-label>Unconfirmed</ion-label>
       </ion-chip>
-      <ion-chip color="brand" *ngIf="confirmations === 1">
+      <ion-chip color="primary" *ngIf="confirmations === 1">
         <ion-label>1 Confirmation</ion-label>
       </ion-chip>
       <ion-chip color="primary" *ngIf="confirmations > 1">
