--- a/packages/insight-previous/src/components/latest-blocks/latest-blocks.html
+++ b/packages/insight-previous/src/components/latest-blocks/latest-blocks.html
@@ -1,4 +1,5 @@
-<error [message]="errorMessage" *ngIf="errorMessage"></error>
+<alert-component [message]="errorMessage" [messageType]="'error'" *ngIf="errorMessage">
+</alert-component>
 <div *ngIf="!errorMessage">
   <ion-grid class="grid--table">
 
