--- a/packages/insight-previous/src/components/alert/alert.html
+++ b/packages/insight-previous/src/components/alert/alert.html
@@ -1,5 +1,6 @@
 <ion-row [ngClass]="messageType">
   <ion-col col-12>
     {{ message }}
+    <a *ngIf="link" href="{{link}}" target="_blank">Read more</a>
   </ion-col>
 </ion-row>
