--- a/packages/insight/src/components/transaction-list/transaction-list.html
+++ b/packages/insight/src/components/transaction-list/transaction-list.html
@@ -12,5 +12,10 @@
         <loader [type]="'tx-full-list'"></loader>
       </ion-infinite-scroll>
     </ion-row>
+    <ion-row *ngIf="transactions.length === 0" class="no-txs">
+      <ion-col col-12>
+        There are no transactions involving this block.
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </div>
