add price-chart-changes to insight

--- a/packages/insight/src/components/head-nav/head-nav.html
+++ b/packages/insight/src/components/head-nav/head-nav.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-navbar color="brand" hideBackButton>
+  <ion-navbar color="bp-blue" hideBackButton>
     <ion-title (click)="goHome(chainNetwork)" class="logo-header">insight</ion-title>
     <button class="search-button" ion-button clear icon-only (click)="toggleSearch()">
       <ion-icon name="search" [color]="!showSearch ? 'light' : 'dark'"></ion-icon>
