--- a/packages/insight/src/app/app.scss
+++ b/packages/insight/src/app/app.scss
@@ -85,8 +85,18 @@ ion-infinite-scroll{
 
 // Desktop
 
+ion-navbar {
+  width: 100%;
+  height: 100%;
+  color: #1d326a;
+  background-image: linear-gradient(to right, #081124, #0b1a35, #0f2246, #152a58, #1d326a);
+}
+
 ion-header .toolbar {
  margin: auto;
+ //@for $var from start to end {
+   
+ //background-image: linear-gradient(to right, #081124, #0b1a35, #0f2246, #152a58, #1d326a);
 }
 
 ion-footer .toolbar[fixed] {
