Finish finalized chart

--- a/packages/insight/src/components/price-card/price-chart/price-chart.scss
+++ b/packages/insight/src/components/price-card/price-chart/price-chart.scss
@@ -10,4 +10,10 @@ price-chart {
   @media (max-width: 400px) {
     max-width: 120px;
   }
+
+  .price {
+    color: grey;
+    font-size: 22px;
+
+  }
 }
