--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -28,7 +28,8 @@ $colors: (
   light: #f4f4f4,
   dark-light: #a2a2a2,
   dark: #373d42,
-  bp-blue: #1d326a
+  bp-blue: #1d326a,
+  light-blue: #299AD1;
 );
 
 // App iOS Variables
