change typescript type for price chart viewchild

--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -29,7 +29,7 @@ $colors: (
   dark-light: #a2a2a2,
   dark: #373d42,
   bp-blue: #1d326a,
-  light-blue: #299AD1;
+  light-blue: #299AD1,
 );
 
 // App iOS Variables
