--- a/packages/insight/src/theme/variables.scss
+++ b/packages/insight/src/theme/variables.scss
@@ -27,7 +27,9 @@ $colors: (
   warning: #ffa400,
   light: #f4f4f4,
   dark-light: #a2a2a2,
-  dark: #373d42
+  dark: #373d42,
+  bp-blue: #1d326a,
+  light-blue: #299AD1,
 );
 
 // App iOS Variables
