--- a/packages/insight/src/components/head-nav/head-nav.scss
+++ b/packages/insight/src/components/head-nav/head-nav.scss
@@ -1,10 +1,33 @@
 head-nav {
 
+  .search-image-container {
+    width: 35px;
+  }
+
+  .search-image {
+    width: 35px;
+    height: 34px;
+    margin-top: 7px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: rgb(235, 235, 235);
+    outline: none;
+
+  }
+
+  .input-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+
   .toolbar-content {
     display: grid;
     grid-template-columns: 20% 1fr 20%;
     justify-items: stretch;
     align-items: center;
+
       ion-title {
         justify-self: start;
         &.logo-header {
@@ -19,16 +42,24 @@ head-nav {
           }
         }
       }
+  
       ion-buttons {
         justify-self: end;
+      }
+
+      ion-row {
+        @media (min-width: map-get($grid-breakpoints, lg)) {
+          display: inline-block;
+        }
       }
       .search{
         justify-self: center;
         @media (min-width: map-get($grid-breakpoints, lg)) {
           display: inline-block;
         }
-        
+
         display: none;
+        
         
         vertical-align: middle;
         input {
@@ -36,9 +67,10 @@ head-nav {
           margin-top: 4px;
           padding: 9px 12px;
           color: color($colors, dark-light);
-          background-color: #FFF;
+          background-color: rgb(235,235,235);
           border: 0;
-          box-shadow: 1px 1px 0 0 rgba(255,255,255,.41), inset 1px 1px 3px 0 rgba(0,0,0,.10);
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
         }
         
         ::-webkit-input-placeholder {
@@ -68,7 +100,7 @@ head-nav {
     img{
       filter:  invert(0%) contrast(50%);
       opacity: 0.2;
-      color: color($colors, dark-light);
+      color: white;//color($colors, whi);
     }
   }
 }
