--- a/packages/insight/src/components/transaction-list/transaction-list.html
+++ b/packages/insight/src/components/transaction-list/transaction-list.html
@@ -4,7 +4,7 @@
   <ion-grid>
     <ion-row *ngFor="let tx of transactions; let i = index">
       <ion-col col-12 *ngIf="i < limit">
-        <transaction-details [tx]="tx" [chainNetwork]="chainNetwork"></transaction-details>
+        <transaction-details [showCoins]="true" [tx]="tx" [chainNetwork]="chainNetwork"></transaction-details>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="limit < transactions.length">
