removing confirmations on API responses

--- a/packages/insight/src/components/transaction-details/transaction-details.html
+++ b/packages/insight/src/components/transaction-details/transaction-details.html
@@ -184,7 +184,7 @@
         <ion-label>{{ confirmations }} Confirmations
         </ion-label>
       </ion-chip>
-      <ion-chip color="danger" *ngIf="tx.isRBF && !tx.hasUnconfirmedInputs && confirmations === -1">
+      <ion-chip color="danger" *ngIf="tx.isRBF && confirmations === -1">
         <ion-label>Replace By Fee (RBF) enabled
         </ion-label>
       </ion-chip>
