--- a/packages/insight/src/app/app.scss
+++ b/packages/insight/src/app/app.scss
@@ -52,18 +52,18 @@ a {
   margin: 10px 0 20px;
 
   .col {
-    padding: 1em 0.6em;
+    padding: 1em 0.4em;
   }
 
   ion-row {
+    font-size: 16px;
 
     &:first-child {
-      background-color: #fff;
       border-top: none;
     }
 
     &:nth-child(even) {
-      background-color: #f8f8f9;
+      background-color: #f8f9fd;
     }
 
     &:last-child {
@@ -71,6 +71,26 @@ a {
     }
   }
 }
+
+
+.grid--table.grid {
+
+  .row {
+    //transition: transform 200ms ease, box-shadow 200ms ease;
+    //font-size: 16px;
+  }
+
+  //&:hover {
+  //  cursor: pointer;
+  //  transform: scale(1.02);
+  //  background-color: #ffffff;
+  //  box-shadow: 0 5px 20px -5px rgba(0, 0, 0, 0.08);
+  //}
+}
+
+
+
+
 
 ion-infinite-scroll{
   width: 100%;
@@ -94,7 +114,7 @@ ion-navbar {
 
 ion-header .toolbar {
  margin: auto;
- 
+
 }
 
 ion-footer .toolbar[fixed] {
@@ -102,6 +122,7 @@ ion-footer .toolbar[fixed] {
 }
 
 @media (min-width: map-get($grid-breakpoints, lg)) {
+
  ion-navbar.toolbar,
  ion-header .toolbar[fixed],
  ion-footer .toolbar[fixed],
@@ -124,4 +145,23 @@ a.disabled-link{
   border-radius: 3px;
   margin: 5px;
   padding: 5px;
+}
+
+
+.pill {
+  background: #f7f8fc;
+  color: #1C1E1A;
+  border-radius: 5px;
+  padding: 4px;
+  text-transform: capitalize;
+}
+
+
+.content-container {
+  background: #f7f8fc !important; //override base ionic color
+}
+
+.content-container--heading {
+  padding-bottom: 2rem;
+  padding-top: 5rem;
 }
