--- a/packages/insight/src/components/head-nav/head-nav.scss
+++ b/packages/insight/src/components/head-nav/head-nav.scss
@@ -5,13 +5,11 @@ head-nav {
   }
 
   .search-image {
-    width: 35px;
-    height: 34px;
-    margin-top: 7px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    background-color: rgb(235, 235, 235);
-    outline: none;
+    width: 16px;
+    opacity: .5;
+    position: absolute;
+    top: 15px;
+    right: 19px;
 
   }
 
@@ -19,88 +17,108 @@ head-nav {
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: relative;
   }
 
+  .hover-lite {
+    &:hover {
+      color: #d7d8dc !important; //override default ionic on-hover color
+    }
+  }
 
   .toolbar-content {
     display: grid;
     grid-template-columns: 20% 1fr 20%;
+    @media (max-width: map-get($grid-breakpoints, lg)) {
+      grid-template-columns: 29% 1fr 1%;
+    }
     justify-items: stretch;
     align-items: center;
 
-      ion-title {
-        justify-self: start;
-        &.logo-header {
-          .toolbar-title{
-            width: auto;
-            cursor: pointer;
-            color: white;
-            font-weight: 700;
-            font-style: italic;
-            font-size: 2em;
-            padding-left: 0px;
-          }
-        }
-      }
-  
-      ion-buttons {
-        justify-self: end;
-      }
+    ion-title {
+      justify-self: start;
 
-      ion-row {
-        @media (min-width: map-get($grid-breakpoints, lg)) {
-          display: inline-block;
-        }
-      }
-      .search{
-        justify-self: center;
-        @media (min-width: map-get($grid-breakpoints, lg)) {
-          display: inline-block;
-        }
-
-        display: none;
-        
-        
-        vertical-align: middle;
-        input {
-          width: 500px;
-          margin-top: 4px;
-          padding: 9px 12px;
-          color: color($colors, dark-light);
-          background-color: #FFF;
-          border: 0;
-          border-top-right-radius: 5px;
-          border-bottom-right-radius: 5px;
-        }
-        
-        ::-webkit-input-placeholder {
-          color: color($colors, dark-light);
+      &.logo-header {
+        .toolbar-title {
+          width: auto;
+          cursor: pointer;
+          color: white;
           font-style: italic;
-          font-weight: 100;
-        }
-        
-        ::-moz-placeholder {
-          color: color($colors, dark-light);
-          font-family: 'Ubuntu', sans-serif;
-          font-weight: 100;
+          font-size: 2em;
+
         }
       }
+    }
+
+    ion-buttons {
+      justify-self: end;
+    }
+
+    ion-row {
+      @media (min-width: map-get($grid-breakpoints, lg)) {
+        display: inline-block;
+      }
+    }
+
+    .search {
+      justify-self: center;
+      @media (min-width: map-get($grid-breakpoints, lg)) {
+        display: inline-block;
+      }
+      display: none;
+      vertical-align: middle;
+
+      input {
+        width: 748px;
+        margin-top: 4px;
+        margin-left: -62px;
+        padding: 9px 12px;
+        color: color($colors, dark-light);
+        background-color: #FFF;
+        border: 0;
+        border-radius: 5px;
+      }
+
+      ::-webkit-input-placeholder {
+        font-style: italic;
+        font-size: 15px;
+      }
+
+      ::-moz-placeholder {
+        font-style: italic;
+        font-size: 15px;
+      }
+    }
   }
+
   .mobile-searchbar > .toolbar-content {
     display: grid;
     grid-template-columns: 100%;
   }
+
   .search-button {
     @media (min-width: map-get($grid-breakpoints, lg)) {
       display: none;
     }
   }
-  .cn-button:hover,
-  .cn-button:focus {
-    img{
-      filter:  invert(0%) contrast(50%);
-      opacity: 0.2;
-      color: color($colors, dark-light);
-    }
+}
+
+.nav-container {
+  height: 80px;
+}
+
+@media (max-width: map-get($grid-breakpoints, lg)) {
+  .currency-icon {
+    display:none;
+  }
+}
+
+.searchbar-md {
+  .searchbar-input {
+    border-radius: 5px;
+  }
+  input::-webkit-input-placeholder, input::-moz-placeholder  {
+    font-style: italic;
+    font-size: 13px;
   }
 }
