style the chain switcher

--- a/packages/insight/src/components/denomination/denomination.html
+++ b/packages/insight/src/components/denomination/denomination.html
@@ -9,11 +9,12 @@
         <img src="assets/img/currency_logos/{{ chainNetwork.chain.toLowerCase() }}.svg" class="logo" />
       </ion-avatar>
       <ion-label color="dark" (click)="changeExplorer(chainNetwork)">
-        <button ion-button small>{{ chainNetwork.chain }} {{ chainNetwork.network }}</button>
+       {{ chainNetwork.chain }} <small class="pill"> {{ chainNetwork.network }}</small>
       </ion-label>
     </ion-item>
   </ion-row>
 </ion-list>
+
 <ion-list radio-group [(ngModel)]="currencySymbol" *ngIf="showUnits">
   <ion-item-divider>
     Units
@@ -25,3 +26,4 @@
     </ion-radio>
   </ion-item>
 </ion-list>
+
