--- a/packages/insight/src/components/head-nav/head-nav.html
+++ b/packages/insight/src/components/head-nav/head-nav.html
@@ -28,7 +28,7 @@
       </ion-buttons>
   </ion-navbar>
 
-  <ion-toolbar class="mobile-searchbar" showWhen="android,ios" fixed>
+  <ion-toolbar class="mobile-searchbar" fixed>
     <form (ngSubmit)="search()">
       <ion-searchbar #searchbar placeholder="{{ 'Search for block, transaction or address' }}" [(ngModel)]="q" name="search"></ion-searchbar>
     </form>
